--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,3 +151,52 @@ body {
     }
 }
 
+
+/* FAQ */
+.tritek_faq details > summary::after {
+    content: url('/assets/img/plus.png');
+    position: absolute;
+    top: 25%;
+    right: 10%;
+    transform: rotate(0);
+    transition: .5s transform ease-in-out;
+}
+
+.tritek_faq details[open] > summary::after {
+    content: url('/assets/img/minus.png');
+    transform: rotate(90deg);
+    transition: .5s transform ease-in-out;
+}
+
+.one {
+    max-height: 0;
+    transition: max-height 700ms ease-in-out;
+    overflow: hidden;
+  }
+
+  details[open] + .one {
+    max-height: 700px; /* Set a max-height value enough to show all the content */
+    border-color: #888;
+    transition: max-height 700ms ease-in-out, border 0ms linear;
+  }
+.two {
+    max-height: 0;
+    transition: max-height 700ms ease-in-out;
+    overflow: hidden;
+  }
+
+  details[open] + .two {
+    max-height: 300px; /* Set a max-height value enough to show all the content */
+    transition: max-height 700ms ease-in-out;
+  }
+.three {
+    max-height: 0;
+    transition: max-height 700ms ease-in-out;
+    overflow: hidden;
+  }
+
+  details[open] + .three {
+    max-height: 300px; /* Set a max-height value enough to show all the content */
+    transition: max-height 700ms ease-in-out;
+  }
+
