Change: Primary color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
 @layer base {
     :root {
-    --primary: #057584;
+    --primary: #6a008e;
     --secondary: #9e9f7f;
     --grey: #efefef;
     --head-primary: #313c4c;
